Fri Feb 27 11:07:20 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/log.c src/tds/query.c: fix possible format problems

Thu Feb 26 20:04:00 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac src/dblib/bcp.c:
	- fixes for MingW
	- don't use old winsock library

Mon Feb 23 17:07:41 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c: applied patch by Amir Shamsuddin to fix core

Wed Feb 11 15:39:34 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/ctlib/unittests/Makefile.am src/dblib/unittests/Makefile.am:
	* src/odbc/unittests/Makefile.am src/tds/unittests/Makefile.am:
	- use libtool -R option instead of -Wl,--rpath

Tue Feb 10 21:39:47 EST 2009	JK Lowden <jklowden@freetds.org>
	* doc/getting_started.txt doc/policy.txt
	* doc/userguide.sgml doc/htdoc/contrib.html
	* doc/htdoc/faq.html
	- updated brian's address

Fri Feb  6 19:22:16 EST 2009	JK Lowden <jklowden@freetds.org>
	* include/sybdb.h include/tds.h src/dblib/dblib.c 
	* src/tds/convert.c src/tds/mem.c src/tds/net.c
	- better winsock initialization and dbdatecrack

Fri Feb  6 15:25:10 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* misc/freetds_autobuild: remove openjade warning
	* src/tds/unittests/convert.c: make valgrind happy

Fri Feb  6 12:11:27 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/tds/unittests/convert.c: fix convert test

Fri Feb  6 11:59:03 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/rpc.sql: fix rpc test

Fri Feb  6 11:10:35 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/common.c: remove file leak in unittests

Thu Feb  5 09:49:08 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/unittests/done_handling.c src/dblib/unittests/rpc.c:
	* src/dblib/unittests/t0011.c src/dblib/unittests/t0016.c:
	* src/dblib/unittests/t0023.c:
	- remove warnings

Tue Feb  3 10:10:24 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>