@@ -1,3 +1,9 @@
+Fri Feb 27 11:11:32 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
+	* configure.ac include/tds_sysdep_private.h:
+	* src/odbc/unittests/freeclose.c src/odbc/unittests/timeout3.c:
+	* src/pool/user.c src/server/login.c src/tds/net.c:
+	- fix nasty problem under HP-UX
+
 Fri Feb 27 11:07:20 CET 2009    Frediano Ziglio <freddy77_A_gmail_D_com>
 	* src/tds/log.c src/tds/query.c: fix possible format problems
 
@@ -1317,4 +1323,4 @@ Wed Jan  9 19:54:43 EST 2008	JK Lowden <jklowden@freetds.org>
 	* ChangeLog  truncated because of release
 	* ChangeLog-0.82 added because of release
 	
-$Id: ChangeLog,v 1.2730 2009-02-27 10:07:34 freddy77 Exp $
+$Id: ChangeLog,v 1.2731 2009-02-27 10:11:42 freddy77 Exp $
